tests/run-make/missing-unstable-trait-bound/missing-bound.rs
pub fn baz<T>(t: std::ops::Range<T>) {
    for _ in t {}
}
fn main() {}
